# ceaexport

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: admin.py  analyses.py  attachments.py  auth.py  catalogs.py  public.py  quality_rules.py  receptions.py  reports.py
backend/app/core/: config.py  db.py  security.py
backend/app/models/: analyses.py  attachments.py  auth.py  catalogs.py  operations.py
backend/app/schemas/: analyses.py  attachments.py  auth.py  catalogs.py  operations.py
backend/app/services/: auth_service.py  storage.py
backend/scripts/: bootstrap_admin.py  import_excel.py
db/: schema.sql  seeds.sql  views.sql
db/migrations/: 01_auth_extensions.sql  02_perf_indexes_and_mv.sql
deploy/: README.md  deploy.sh
docs/: data-model.md  status.md  ui-flow.md
frontend/: Dockerfile  cloudbuild.yaml  index.html  nginx.conf.template  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AttachmentsModal.tsx  AttachmentsSection.tsx  CatalogAutocomplete.tsx  CatalogMultiSelect.tsx  CatalogSelect.tsx  DateRangePicker.tsx  EmptyState.tsx  LotPhotosModal.tsx  MainNav.tsx  PasswordInput.tsx  RecepcionDetalleModal.tsx  ScoreDonut.tsx  Skeleton.tsx  StarRating.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useCatalogs.ts  useCountUp.ts
frontend/src/layouts/: AppLayout.tsx
frontend/src/pages/: HomePage.tsx  (+1 more)
(+20 files in other folders)
